--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jogomobille">
-<<<<<<< Updated upstream
-=======
 
     <uses-permission android:name="android.permission.INTERNET" />
->>>>>>> Stashed changes
 
     <application
         android:allowBackup="true"
@@ -14,16 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoMobille">
-<<<<<<< Updated upstream
 
-=======
         <activity
             android:name=".SignupActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
->>>>>>> Stashed changes
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -36,16 +30,13 @@
         </activity>
 
         <activity
-            android:name=".MainActivity2"
+            android:name=".GameActivity"
             android:exported="true"
-<<<<<<< Updated upstream
             android:screenOrientation="landscape">
         </activity>
 
 
-=======
             android:screenOrientation="landscape" />
->>>>>>> Stashed changes
     </application>
 
 </manifest>
