--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoMobille">
-
+        <activity
+            android:name=".TelaDeMorte"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -20,14 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity2"
             android:exported="true"
-            android:screenOrientation="landscape">
-        </activity>
-
-
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
