--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jogomobille">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,12 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoMobille">
-
         <activity
-            android:name=".SignupActivity"
-            android:exported="true" />
-        <activity
-            android:name=".LoginActivity"
+            android:name=".TelaDeMorte"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
@@ -28,15 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".GameActivity"
+            android:name=".MainActivity2"
             android:exported="true"
-            android:screenOrientation="landscape">
-        </activity>
-
-
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
