--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoMobille">
-
+        <activity
+            android:name=".TelaDeMorteActivity"
+            android:exported="true" />
         <activity
             android:name=".SignupActivity"
             android:exported="true" />
@@ -28,15 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".GameActivity"
             android:exported="true"
-            android:screenOrientation="landscape">
-        </activity>
-
-
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
