--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoMobille">
         <activity
+            android:name=".LevelDifficultyActivity"
+            android:exported="true" />
+        <activity
             android:name=".TelaDeMorteActivity"
             android:exported="true" />
         <activity
@@ -33,7 +36,7 @@
         <activity
             android:name=".GameActivity"
             android:exported="true"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
