--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JogoMobille">
         <activity
+            android:name=".ScoreboardActivity"
+            android:exported="true" />
+        <activity
             android:name=".TelaDeVitoriaActivity"
             android:exported="true" />
         <activity
